--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "verilog-library-barawn"]
 	path = verilog-library-barawn
-	url = https://github.com/barawn/verilog-library-barawn
+	url = git@github.com:LBeaufore/verilog-library-barawn.git
 [submodule "pueo-pynq-designs"]
 	path = pueo-pynq-designs
-	url = https://github.com/pueo-pynq/pueo-pynq-designs
+	url = git@github.com:pueo-pynq/pueo-pynq-designs.git
